# dodrio_templating

./: Cargo.toml  Makefile.toml  README.md  changelog.md  index.html  rustfmt.toml  wasm_size.txt
css/: dodrio_templating.css
example/: t1.html  t2.html  t3.html
html_templates/: index.html  t1.html  t2.html  t3.html
other/: old_code_samples  t3test.html  t4.html  wasm_size.txt  x4.html
src/: fetchmod.rs  fncallermod.rs  htmlentitiesmod.rs  htmltemplatemod.rs  lib.rs  microxmlparser.rs  routermod.rs
