[package]
name = "dodrio_templating"
version = "0.2.0"
authors = ["bestia.dev <info@bestia.dev>"]
edition = "2018"
description = "templating for dodrio"
repository = "https://github.com/bestia-dev/dodrio_templating"
readme = "README.md"
license = "MIT"
keywords = ["wasm","templating"]
categories = ["learning"]
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = 'abort'
#smaller wasm size
lto = true
#optimize for size 's', more opt for size 'z'
opt-level = 's'

[dependencies]
unwrap = "1.2.1"
dodrio =  { git = "https://github.com/fitzgen/dodrio", branch = "master" }
#dodrio = {path = "../dodrio"}
wasm-bindgen = { version = "0.2.58" }
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"
wasm-bindgen-futures="0.4.8"
reader_for_microxml = "1.0.4"

[dependencies.web-sys]
version = "0.3.34"
features = [
#  "AbortController",
  "console",
  "Document",
#  "DomException",
  "Element",
#  "ErrorEvent",
#  "Event",
#  "EventListener",
  "EventTarget",
#  "FormData",
"HashChangeEvent",
#  "Headers",
"History",
#  "HtmlCanvasElement",
#  "HtmlCollection",
#  "HtmlElement",
#  "HtmlFormElement",
#  "HtmlInputElement",
#  "HtmlImageElement",
  "Location",
#  "MouseEvent",
#  "Node",
#  "ReferrerPolicy",
"Request",
"RequestInit",
"Response",
"Window",
]

#[dev-dependencies]
#wasm-bindgen-test = "0.3.8"
